test/spec_vectors/i32/fail/module_42.wat
(module (func $f (param i32) (result i32) (local.get 0)) (type $sig (func (param i32) (result i32))) (table funcref (elem $f)) (func $type-binary-2nd-operand-empty-in-call_indirect (block (result i32) (call_indirect (type $sig) (i32.const 0) (i32.add) (i32.const 0)) (drop))))